# cp-scheduling

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  clear.sh  logging.conf  mypy.ini  progress.md  project.ipynb  pyproject.toml  pytest.ini  requirements.txt  setup.py  speed_report.py
.github/workflows/: benchmark.yml  ci.yml
benchmarks/: pdr_benchmark.csv  pdr_benchmark.old.csv  pdr_benchmark.py  pdr_benchmark.v5.csv
benchmarks/jobshop/: pdr_benchmark.py  pdr_benchmark.v4.csv
cpscheduler/: __init__.py  aliases.py  common.py  common_envs.py  utils.py
cpscheduler/algorithms/: __init__.py  base.py  bc.py  buffer.py  common.py  end2end.py  iql.py  ppo.py  protocols.py  utils.py
cpscheduler/algorithms/offline/: bc.py
cpscheduler/algorithms/online/: reinforce.py
cpscheduler/environment/: __init__.py  _common.py  _protocols.py  _render.py  common.py  component.py  components.py  constants.py  constraints.py  data.py  debug.py  env.py  events.py  instance.py  instances.py  instructions.py  metrics.py  objectives.py  protocols.py  render.py  schedule_setup.py  solver.py  specs.py  state.py  tasks.py  utils.py  variables.py  wrappers.py
cpscheduler/environment/constraints/: __init__.py  _future.py  base.py  disjunctive.py  groups.py  machine.py  optional.py  passive.py  precedence.py  resources.py  setup.py  soft.py  time_windows.py
cpscheduler/environment/des/: __init__.py  _queue.py  actions.py  base.py  events.py  schedule.py
cpscheduler/environment/generator/: __init__.py
cpscheduler/environment/instance/: __init__.py  features.py  instance.py
cpscheduler/environment/instructions/: __init__.py  instructions.py  schedule.py
cpscheduler/environment/objectives/: __init__.py  base.py  completion.py  compositive.py  earliness.py  lateness.py  makespan.py  tardy.py
cpscheduler/environment/observation/: __init__.py  base.py  default.py  runtime_feature.py  specs.py
cpscheduler/environment/setups/: __init__.py  base.py  parallel.py  shop.py
cpscheduler/environment/specs/: __init__.py  composite.py  feature_spec.py  symbols.py
cpscheduler/environment/state/: __init__.py  csp.py  des.py  events.py  instance.py  runtime.py  state.py  violations.py
cpscheduler/environment/tracer/: __init__.py  base.py  trajectory.py
cpscheduler/environment/utils/: __init__.py  debug.py  general.py  protocols.py
cpscheduler/environment/vector/: __init__.py  async_env.py  common.py  ray_env.py  sync_env.py
cpscheduler/environment/wrappers/: __init__.py  act_wrappers.py  misc_wrappers.py  obs_wrappers.py  wrapper.py
cpscheduler/evaluation/: general.py
cpscheduler/gym/: __init__.py  aliases.py  common.py  env.py  gym_utils.py  obs_spaces.py
cpscheduler/gym/wrappers/: __init__.py  act_wrappers.py  misc_wrappers.py  obs_wrappers.py
cpscheduler/heuristics/: __init__.py  _pdr.py  _protocols.py  array_utils.py  legacy_pdr.py  list_wrapper.py  new_pdr.py  pdr.py  pdr_heuristics.py
cpscheduler/heuristics/pdrs/: __init__.py  _utils.py  base.py  composite_rules.py  compositive_rules.py  due_date_rules.py  precedence_rules.py  simple_rules.py  utils.py
cpscheduler/instances/: __init__.py  common.py  customer.py  dists.py  jobshop.py  rcpsp.py  smtwt.py
cpscheduler/instances/distributions/: __init__.py  base.py  continuous.py  deterministic.py  discrete.py  scheduling.py
cpscheduler/instances/formats/: __init__.py  rcpsp.py  smtwt.py
cpscheduler/instances/generation/: _common.py  constraint.py  generate.py  objective.py  setup.py
cpscheduler/instances/generators/: __init__.py  default.py  generator.py
cpscheduler/policies/: __init__.py  common.py  end2end.py  perm.py
cpscheduler/policies/heuristics/: __init__.py  pdr_heuristics.py
cpscheduler/renderers/: __init__.py  plotly_renderer.py
cpscheduler/rl/: __init__.py  base.py  buffer.py  logger.py  network.py  preprocessor.py  protocols.py  utils.py
cpscheduler/rl/evaluation/: __init__.py  general.py
cpscheduler/rl/offline/: __init__.py  bc.py
cpscheduler/rl/online/: __init__.py  reinforce.py
cpscheduler/rl/policies/: __init__.py  end2end.py  perm.py
cpscheduler/solver/: __init__.py  formulation.py  solver.py  symmetry_breaking.py  utils.py
cpscheduler/solver/cp/: __init__.py  constraints.py  cp_formulation.py  minizinc_formulation.py  objectives.py  utils.py
cpscheduler/solver/milp/: __init__.py  pulp_utils.py  pyomo_formulation.py
cpscheduler/solver/minizinc/: minizinc_utils.py  solver.py  tasks.py
cpscheduler/solver/pulp/: __init__.py  common.py  constraint.py  objective.py  pulp_utils.py  setup.py  solver.py  symmetry_breaking.py  tasks.py  utils.py
cpscheduler/utils/: _protocols.py  array_utils.py  general_algo.py  list_utils.py  typing_utils.py
data/: generate_dataset.ipynb
data/customers/: README.md  customer.py  optimal.py  optimal_actions.npy  wt40_50_0.5.pkl  wt40_50_0.5_training.pkl
models/pl_behavior_cloning/: policy.pkl  weights.pth
models/pl_reinforce/: policy.pkl  weights.pth
notebooks/: 00 - Linear Hypothesis.ipynb  01 -  Stochastic PDRs.ipynb  01b - Linear hypothesis.ipynb  02 - Generating Dataset.ipynb  03 - Plackett-Luce Hypothesis.ipynb  04 - Learning from Data.ipynb  05 - Parameter Estimation.ipynb  End2End.ipynb  ppo.ipynb
run/: end2end.py  pl_behavior_cloning.py  pl_parameter_estimation.py  pl_reinforce.py  submit_ablation.sh  submit_optimal.sh  submit_parameter.sh  submit_parameter_random.sh
scripts/: _common.py  memory_report.py  speed_report.py
tests/: common.py  conftest.py  test_arrays.py  test_compiled.py  test_constraints.py  test_des_events.py  test_envs.py  test_gym.py  test_import.py  test_pdr.py  test_propagate_dispatch.py  test_schedule_api.py  test_setups.py  test_solution.py  test_solver.py  test_vector.py
tests/environment/: test_arrays.py  test_envs.py
tests/environment/constraints/: test_constraints.py
tests/environment/des/: test_des_events.py  test_schedule_api.py
tests/gym/: test_gym.py
tests/heuristics/: test_pdr.py
tests/solver/: test_solver.py
(+14 files in other folders)
