[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm",
    "wheel",
    "mypy>=1.13.0",
    "mypy_extensions",
    "tomli; python_version<'3.11'",
    "multimethod >= 2.0.0",
    "numpy"
]
build-backend = "setuptools.build_meta"

[project]
name = "cpscheduler"
version = "0.6.0"
authors = [
    { name="Daniel Gardin", email="gardin.dan@gmail.com" },
]
description = "Solving Scheduling Problems with Constraint Programming and Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mypy_extensions",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cpscheduler*"]

[project.urls]
Repository = "https://github.com/DanielGardin/cp-scheduling"

[project.optional-dependencies]

gym = [
    "gymnasium >= 1.1.1",
    "pandas >= 2.1.3",
    "plotly>=6.2.0",
    "colorcet>=3.1.0"
]

rl = [
    "cpscheduler[gym]",
    "torch >= 2.0.1",
    "tensordict >= 0.7.0",
    "tqdm >= 4.67.1",
    "wandb >= 0.21.0",
    "tensorboard >= 2.19.0",
    "tyro >= 0.9.26"
]

solver = [
    "pulp >= 2.7.0",
    "nest_asyncio>=1.6.0",
    "multimethod >= 2.0.0",
]

all = [
    "cpscheduler[gym, rl, solver]"
]

dev = [
    "cpscheduler[all]",
    "pytest >= 7.1.3",
    "mypy >= 1.13.0",
    "black >= 25.1.0"
]

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.mypy]
exclude = ['cpscheduler/rl']
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "torch"
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "torch.*"
follow_imports = "skip"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pulp"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "minizinc"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plotly"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "colorcet"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "nest_asyncio"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensordict"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tensorboard.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "compilation: mark a test as a compilation test",
    "env: mark a test as an environment test",
    "solver: mark a test as a solver test",
    "heuristics: mark a test as a heuristics test",
    "vector: mark a test as a vector test",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
