[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm",
    "wheel",
    "mypy>=1.13.0",
    "mypy_extensions",
    "tomli; python_version<'3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "cpscheduler"
version = "0.7.0"
authors = [
    { name="Daniel Gardin", email="gardin.dan@gmail.com" },
]
description = "Constraint-Programming-based Environment for Learning Scheduling Dispatch Rules"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mypy_extensions",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cpscheduler*"]

[project.urls]
Repository = "https://github.com/DanielGardin/cp-scheduling"

[project.optional-dependencies]

gym = [
    "gymnasium >= 1.1.1",
    "pandas >= 2.1.3",
    "plotly>=6.2.0"
]

solver = [
    "pyomo >= 6.7.3",
    "nest_asyncio>=1.6.0",
    "minizinc>=0.10.0"
]

all = [
    "cpscheduler[gym, solver]"
]

dev = [
    "cpscheduler[all]",
    "pytest >= 7.1.3",
    "pytest-cov >= 5.0.0",
    "mypy >= 1.13.0",
    "black >= 25.1.0",
    "prettytable",
    "tyro"
]

[tool.black]
line-length = 80
target-version = ["py310"]

[tool.mypy]
exclude = "benchmarks/*"
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "plotly"
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "compilation: mark a test as a compilation test",
    "env: mark a test as an environment test",
    "solver: mark a test as a solver test",
    "heuristics: mark a test as a heuristics test",
    "vector: mark a test as a vector test",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
branch = true
source = ["cpscheduler"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "assert_never\\(",
]
