[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "mypy>=1.13.0",
    "tomli; python_version<'3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "cpscheduler"
version = "0.8.0"
authors = [
    { name="Daniel Gardin", email="gardin.dan@gmail.com" },
]
description = "Constraint-Programming-based Environment for Learning Scheduling Dispatch Rules"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "mypy_extensions",
    "typing-extensions",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cpscheduler*"]

[project.urls]
Repository = "https://github.com/DanielGardin/cp-scheduling"

[project.optional-dependencies]

gym = [
    "gymnasium >= 1.1.1",
    "pandas >= 2.1.3",
    "plotly>=6.2.0"
]

solver = [
    "pyomo >= 6.7.3",
    "nest_asyncio>=1.6.0",
    "minizinc>=0.10.0"
]

all = [
    "cpscheduler[gym, solver]"
]

benchmark = [
    "matplotlib",
    "seaborn",
    "scipy",
    "prettytable",
    "tyro",
]

dev = [
    "cpscheduler[all, benchmark]",
    "pytest >= 7.1.3",
    "pytest-cov >= 5.0.0",
    "mypy >= 1.13.0",
    "ruff",
    "types-setuptools",
    "plotly-stubs",
]

[tool.ruff]
line-length = 80
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    "/build",
    "/dist",
    "/instances"
]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear,
    "C4",  # Helps you write better list/set/dict comprehensions
    "D",   # documentation
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort - Import sorting
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "RUF", # Ruff lint
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "TID", # flake8-tidy-imports
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings 
]
extend-select = ["D417"]

ignore = [
    "E501", # Line too long is already handled by ruff format.
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of `assert` detected
    "PLR2004", # Magic value used in comparison
    "D",       # Missing docstrings
    "ARG001",  # Unused function argument
]

[tool.mypy]
exclude = [
    "benchmarks/*",
    "build/*",
    "scripts/*",
]
strict = true
pretty = true
show_error_codes = true
show_column_numbers = true
warn_unused_ignores = true
warn_redundant_casts = false
warn_unused_configs = true
disallow_subclassing_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "compilation: mark a test as a compilation test",
    "env: mark a test as an environment test",
    "solver: mark a test as a solver test",
    "heuristics: mark a test as a heuristics test",
    "vector: mark a test as a vector test",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
branch = true
source = ["cpscheduler"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "assert_never\\(",
]